fix(input): overflow corrected

--- a/src/components/common/Input/Input.scss
+++ b/src/components/common/Input/Input.scss
@@ -5,7 +5,7 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  min-height: 118px;
+  min-height: 158px;
 
   &_kind {
     &_form {
@@ -53,6 +53,7 @@
   top: 20px;
   right: 5px;
   z-index: 2;
+  background-color: $gray-light;
 }
 
 .input__searchIcon {
@@ -60,18 +61,25 @@
   top: 10px;
   right: 5px;
   z-index: 2;
+  background-color: $gray-light;
 }
 
 .input__passwordImg {
   width: 24px;
   aspect-ratio: 1;
   object-fit: contain;
+  &:hover {
+    filter: alpha(80%);
+  }
 }
 
 .input__searchImg {
   width: 28px;
   aspect-ratio: 1;
   object-fit: contain;
+  &:hover {
+    filter: brightness(70%);
+  }
 }
 
 .input__field {
@@ -114,7 +122,7 @@
     &_password {
       width: 408px;
       height: 69px;
-      padding: 20px;
+      padding: 20px 60px 20px 20px;
       border-radius: 12px;
     }
 
@@ -128,7 +136,7 @@
     &_search {
       width: 478px;
       height: 48px;
-      padding: 10px 20px;
+      padding: 10px 60px 10px 20px;
       border-radius: 10px;
       min-height: auto;
     }
@@ -174,9 +182,9 @@
   display: -webkit-box;
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
+  overflow: hidden;
   margin: 0;
   padding: 5px 0 0 0;
-  text-wrap: normal;
 }
 
 
